--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
   </head>
   <body>
     <h1>html dersleri</h1>
+    <div class="header">
+      <ul>
+        <li>my name</li>
+        <li>my surname</li>
+      </ul>
+    </div>
   </body>
 </html>
